# Bomberman42

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GameProgression.json  Makefile  README.md  auteur  destest.scene  log  main.scene  script.sh  test.scene  test2.scene  testIA.scene  testSettings.json
Bomberman.dSYM/Contents/: Info.plist
Prefabs/: item.prefab  mapCrate.prefab  reMapCrate.prefab
assets/Prefabs/: mapCrate.prefab
assets/models/Fire/: fired.mtl
assets/scenes/: level1.scene  main.scene
cmake/: FindLibSndFile.cmake
dep/Core/: Window.d.40873
html/: _a_collider_8hpp.html  _a_collider_8hpp__dep__incl.dot  _a_collider_8hpp__dep__incl.map  _a_collider_8hpp__dep__incl.md5  _a_collider_8hpp__incl.dot  _a_collider_8hpp__incl.map  _a_collider_8hpp__incl.md5  _a_collider_8hpp_source.html  _a_light_8hpp.html  _a_light_8hpp__dep__incl.map  _a_light_8hpp__dep__incl.md5  _a_light_8hpp__incl.map  _a_light_8hpp__incl.md5  _a_light_8hpp_source.html  _a_material_8hpp.html  _a_material_8hpp__dep__incl.dot  _a_material_8hpp__dep__incl.map  _a_material_8hpp__dep__incl.md5  _a_material_8hpp__incl.dot  _a_material_8hpp__incl.map  _a_material_8hpp__incl.md5  _a_material_8hpp_source.html  _a_routine_runner_8hpp.html  _a_routine_runner_8hpp__dep__incl.dot  _a_routine_runner_8hpp__dep__incl.map  _a_routine_runner_8hpp__dep__incl.md5  _a_routine_runner_8hpp__incl.dot  _a_routine_runner_8hpp__incl.map  _a_routine_runner_8hpp__incl.md5  _a_routine_runner_8hpp_source.html  _a_scene_8hpp.html  _a_scene_8hpp__dep__incl.dot  _a_scene_8hpp__dep__incl.map  _a_scene_8hpp__dep__incl.md5  _a_scene_8hpp__incl.dot  _a_scene_8hpp__incl.map  _a_scene_8hpp__incl.md5  _a_scene_8hpp_source.html  _ambiant_light_8hpp.html  _ambiant_light_8hpp__incl.map  (+1207 more)
html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  defines_5.js  defines_7.js  enums_3.js  enumvalues_0.js  enumvalues_13.js  (+61 more)
include/Audio/: AudioClip.hpp  AudioListener.hpp  AudioMaster.hpp  AudioSource.hpp  Source.hpp
include/Core/: AScene.hpp  BeerEngine.hpp  Camera.hpp  Core.hpp  GameObject.hpp  GenericScene.hpp  Input.hpp  KeyCode.hpp  Mathf.hpp  SceneManager.hpp  Time.hpp  Transform.hpp  Window.hpp
include/Core/Audio/: AudioClip.hpp  AudioListener.hpp  AudioSource.hpp
include/Core/BeerRoutine/: ARoutineRunner.hpp  BeerRoutine.hpp
include/Core/Component/: ACollider.hpp  BoxCollider2D.hpp  CircleCollider.hpp  Component.hpp  IColliderEnter.hpp  IColliderExit.hpp  IColliderStay.hpp  IDisable.hpp  IEnable.hpp  IOnDestroy.hpp  IRender.hpp  IRenderAlpha.hpp  IRenderForward.hpp  IRenderShadow.hpp  IStart.hpp  IStartUI.hpp  ITriggerEnter.hpp  ITriggerExit.hpp  ITriggerStay.hpp  IUI.hpp  IUpdate.hpp  MeshRenderer.hpp  ModelAnimator.hpp  ModelRenderer.hpp  ModelRenderer2.hpp  ParticleBase.hpp  ParticleExplode.hpp  RaysRenderer.hpp  RigidBody2D.hpp
include/Core/Graphics/: ALight.hpp  AMaterial.hpp  Cubemap.hpp  Framebuffer.hpp  Graphics.hpp  Mesh.hpp  MeshBuilder.hpp  Particles.hpp  ShaderProgram.hpp  Texture.hpp
include/Core/IO/: FileUtils.hpp
include/Core/Json/: Json.hpp  JsonSerializable.hpp
include/Core/Maths/: Maths.hpp  Matrix4x4.hpp  Operator.hpp  Vector2f.hpp  Vector3f.hpp  Vector4f.hpp
include/Core/Physics/: Physics.hpp
include/Game/: Assets.hpp  CameraTest.hpp  Game.hpp  Input.hpp  Level1.hpp  Level2.hpp  Level3.hpp  Level4.hpp  Level5.hpp  Level6.hpp  LevelEnd.hpp  SceneBasics.hpp  SceneLoader.hpp  SceneMain.hpp  SceneRandom.hpp  SceneTest.hpp  Versus1.hpp  Versus2.hpp  Versus3.hpp
latex/: _a_collider_8cpp.tex  _a_collider_8cpp__incl.md5  _a_collider_8hpp.tex  _a_collider_8hpp__dep__incl.dot  _a_collider_8hpp__dep__incl.md5  _a_collider_8hpp__incl.dot  _a_collider_8hpp__incl.md5  _a_material_8cpp.tex  _a_material_8cpp__incl.md5  _a_material_8hpp.tex  _a_material_8hpp__dep__incl.dot  _a_material_8hpp__dep__incl.md5  _a_material_8hpp__incl.dot  _a_material_8hpp__incl.md5  _a_routine_runner_8cpp.tex  _a_routine_runner_8cpp__incl.md5  _a_routine_runner_8hpp.tex  _a_routine_runner_8hpp__dep__incl.dot  _a_routine_runner_8hpp__dep__incl.md5  _a_routine_runner_8hpp__incl.dot  _a_routine_runner_8hpp__incl.md5  _a_scene_8cpp.tex  _a_scene_8cpp__incl.md5  _a_scene_8hpp.tex  _a_scene_8hpp.tex.tmp  _a_scene_8hpp__dep__incl.dot  _a_scene_8hpp__dep__incl.md5  _a_scene_8hpp__incl.dot  _a_scene_8hpp__incl.md5  _assets_8cpp.tex  _assets_8cpp__incl.md5  _assets_8hpp.tex  _assets_8hpp__dep__incl.dot  _assets_8hpp__dep__incl.md5  _assets_8hpp__incl.dot  _assets_8hpp__incl.md5  _audio_clip_8cpp.tex  _audio_clip_8cpp__incl.md5  _audio_clip_8hpp.tex  _audio_clip_8hpp__dep__incl.dot  (+1208 more)
models/BigMaxOBJ/: Bigmax_White_OBJ.mtl
shaders/: basic.fs  basic.vs  basic_f.glsl  basic_gui_f.glsl  basic_gui_v.glsl  basic_v.glsl  cubemap_builder_f.glsl  cubemap_builder_v.glsl  cubemap_f.glsl  cubemap_v.glsl  line_f.glsl  line_v.glsl  main.frag  main.vert  model_v.glsl  particle_f.glsl  particle_g.glsl  particle_v.glsl  skybox_f.glsl  skybox_v.glsl  ui.fs  ui.vs
shaders/lights/: ambiant_light_f.glsl  ambiant_light_v.glsl  directional_light_f.glsl  directional_light_v.glsl  light.glsl  lights_f.glsl  lights_v.glsl
shaders/shadows/: shadow_render_v.glsl
sources/: main.cpp
sources/Audio/: AudioClip.cpp  AudioListener.cpp  AudioMaster.cpp  AudioSource.cpp  Source.cpp
sources/Core/: AScene.cpp  Camera.cpp  GameObject.cpp  GenericScene.cpp  Input.cpp  Mathf.cpp  SceneManager.cpp  Time.cpp  Transform.cpp  Window.cpp
sources/Game/: Assets.cpp  CameraTest.cpp  Input.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Level4.cpp  Level5.cpp  Level6.cpp  LevelEnd.cpp  SceneBasics.cpp  SceneLoader.cpp  SceneMain.cpp  SceneRandom.cpp  SceneTest.cpp  Versus1.cpp  Versus2.cpp  Versus3.cpp
(+104 files in other folders)
